fixed side Drawer Alignment

--- a/src/style/main-layout.module.scss
+++ b/src/style/main-layout.module.scss
@@ -78,7 +78,7 @@
                 height: calc(100% - 66px);
                 position: fixed;
                 left: 0;
-                top: 65px;
+                top: 66px;
                 // z-index: 1000;
                 background-color: white;
                 box-shadow: inset -1px 0 0 rgb(100 121 143 / 20%);
